2000-12-05  Dieter Baron  <dillo@danbala.tuwien.ac.at>

	* configure.in: check for struct sockaddr_storage.
	* acinclude.m4 (NIH_HAVE_STRUCT): generic check for a struct.

	* sockets.c (sopen): new version with inet6 support.

2000-12-04  Dieter Baron  <dillo@danbala.tuwien.ac.at>

	* configure.in: check for presence of getaddrinfo.
	* getaddrinfo.c: new replacement function.

2000-11-26  Dieter Baron  <dillo@danbala.ifoer.tuwien.ac.at>

	* readdir.c (read_dir): don't call pfunc[npfunc], as it doesn't
	exist.
	(parse_unix): recognize lines where there is no space between
	permissions and number of links (as is the case on some servers on
	files with more than 99 links).

2000-10-19  Dieter Baron  <dillo@danbala.ifoer.tuwien.ac.at>

	* configure.in: search for tgetent in libc (needed on Darvin).

2000-10-16  Dieter Baron  <dillo@danbala.tuwien.ac.at>

	* sockets.c (sopen): include hostname in connect error message.

2000-06-28  Dieter Baron  <dillo@danbala.ifoer.tuwien.ac.at>

	* ftp.c (ftp_accept): set close-on-exec flag, so piping works.

2000-06-02  Dieter Baron  <dillo@danbala.tuwien.ac.at>

	* inet_aton.c (inet_aton): new function.
	* configure.in: AC_REPLACE_FUNCS inet_aton.

2000-06-01  Dieter Baron  <dillo@danbala.tuwien.ac.at>

	* sockets.c (sopen): use inet_aton to convert dotted quad
	notation to address.

2000-05-18  Dieter Baron  <dillo@danbala.tuwien.ac.at>

	* ftp.c (ftp_cat): correct transfer rate display when start != 0.

2000-05-09  Dieter Baron  <dillo@danbala.tuwien.ac.at>

	* ftp.c (ftp_cat, _ftp_update_transfer): display transfer rate.

	* signals.c (sig_remember): add sig_alarm.
	* signals.h: declare signal counters extern, add sig_alarm.

2000-05-05  Dieter Baron  <dillo@danbala.tuwien.ac.at>

	* tag.c (_tag_insert): realloc tags.line on overflow, correcting
	next/prev pointers.

2000-05-02  Dieter Baron  <dillo@danbala.tuwien.ac.at>

	* tag.c (tag_file): don't initialize dir if not given, simplified
	strcmp.